set up all of the error conditions but got to do none of the fun

--- a/static/index.html
+++ b/static/index.html
@@ -1,2 +1,12 @@
-<h1>Hello darkness, my old friend.</h1>
-<h2>eternal darkness is now available in a hypr text mrkup lng version!!!!1</h2>
+<html>
+  <head>
+    <title>D A R K N E S S I S E V E R Y W H E R E</title>
+  </head>
+  <body>
+    <h1>Hello darkness, my old friend.</h1>
+    <h2>eternal darkness is now available in a hypr text mrkup lng version!!!!1</h2>
+
+    <button disabled id="plsnotify">pls to be notify</button>
+    <script src="./scrippies.js"></script>
+  </body>
+</html>
